5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1756_1189.log
== SUBMITION (2019-05-27 15:26:05) 
-- CODE:
s = input("digite: ").upper()
s=s.replace(' ','')

inv = ""
i = -1
b = 1
c = 0

while i>=-lens(s):
	inv = inv + s[i]
	if(s[c]) != (s[i]):
		b=0
	c=c+1
	i=i-1
print(s)
print(b)
-- EXECUTION TIME:
0.156072
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1189/main.py", line 9, in <module>
    while i>=-lens(s):
NameError: name 'lens' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:26:09) 
-- CODE:
s = input("digite: ").upper()
s=s.replace(' ','')

inv = ""
i = -1
b = 1
c = 0

while i>=-lens(s):
	inv = inv + s[i]
	if(s[c]) != (s[i]):
		b=0
	c=c+1
	i=i-1
print(s)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while i>=-lens(s):
NameError: name 'lens' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:26:37) 
-- CODE:
s = input("digite: ").upper()
s=s.replace(' ','')

inv = ""
i = -1
b = 1
c = 0

while i>=-len(s):
	inv = inv + s[i]
	if(s[c]) != (s[i]):
		b=0
	c=c+1
	i=i-1
print(s)
print(b)
-- EXECUTION TIME:
0.180303
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
